# blog

./: .gitignore  404.markdown  LICENSE  Makefile  about.markdown  about.md  blog.cabal  blog.hs  contact.md  index.html  projects.md
css/: screen.css
posts/: 2008-06-27-gsoc-2008-vi-input-mode-for-kate.markdown  2008-08-21-gsoc-is-over-the-state-of-katevim.markdown  2008-11-24-the-vi-input-mode-for-kate-is-done.markdown  2008-11-24-the-vi-input-mode-for-kate-is-done.md  2008-12-23-photo-breiavatnet.markdown  2008-12-29-photo-tira.markdown  2009-03-09-photo-herman-dune.md  2009-05-01-sjekkliste-for-engelske-brev.markdown  2009-05-01-sjekkliste-for-engelske-brev.md  2009-05-05-google-calendar-plasmoid.markdown  2009-05-05-google-calendar-plasmoid.md  2009-05-07-google-calendar-plasmoid-take-two.markdown  2009-05-07-google-calendar-plasmoid-take-two.md  2009-07-08-how-kate-got-x-rated.md  2009-07-26-photo-nidelva.md  2009-10-26-kates-vi-input-mode-what-will-kde44-bring.markdown  2009-10-26-kates-vi-input-mode-what-will-kde44-bring.md  2009-11-02-wish-options-forkates-indenting-scripts.markdown  2009-12-17-photo-chess-at-naboen.md  2009-12-20-photo-december-in-trondheim.markdown  2010-01-09-photo-cold-ocean.markdown  2010-01-09-photo-winter-sun.md  2010-01-17-hsunixcompaths-on-debian.markdown  2010-03-20-code-reading-as-a-team-activity.markdown  2010-03-20-code-reading-as-a-team-activity.md  2010-03-20-game-of-life.md  2010-03-22-how-neurons-do-diffrentiation.markdown  2010-10-01-showing-grub-menu-after-hibernating-in-opensuse.md  2011-01-19-solitaire-cipher.md  (+46 more)
(+5 files in other folders)
