Name:               blog
Version:            0.1.0.0
Synopsis:           Personal website of Erlend Hamberg
Description:        Personal website of Erlend Hamberg
Homepage:           http://hamberg.no/erlend
License:            AllRightsReserved
License-file:       LICENSE
Author:             Erlend Hamberg
Maintainer:         erlend@hamberg.no
Copyright:          (C) 2014 Erlend Hamberg
Category:           Web
Build-type:         Simple
Cabal-version:      >= 1.8

Executable blog
  Main-is:        blog.hs
  Ghc-options:    -Wall

  Build-depends: base, hakyll
